--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@
 # http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
 
 [metadata]
-name = repo_name_to_be_changed
+name = U-net
 description = Add a short description here!
 author = thibault
 author-email = thibault.notargiacomo@gamaya.com
@@ -53,18 +53,18 @@ testing =
 [options.entry_points]
 # Add here console scripts like:
 # console_scripts =
-#     script_name = repo_name_to_be_changed.module:function
+#     script_name = U-net.module:function
 # For example:
 # console_scripts =
-#     fibonacci = repo_name_to_be_changed.skeleton:run
+#     fibonacci = U-net.skeleton:run
 # And any other entry points, for example:
 # pyscaffold.cli =
 #     awesome = pyscaffoldext.awesome.extension:AwesomeExtension
 #distutils.commands =
-#    gen_report = repo_name_to_be_changed.viz:GenReport
+#    gen_report = U-net.viz:GenReport
 
 #[options.cmdclass]
-#    gen_report = repo_name_to_be_changed.viz:GenReport
+#    gen_report = U-net.viz:GenReport
 
 
 [test]
@@ -78,7 +78,7 @@ extras = True
 # e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
 # in order to write a coverage file that can be read by Jenkins.
 addopts =
-    --cov repo_name_to_be_changed --cov-report term-missing
+    --cov U-net --cov-report term-missing
     --verbose
 norecursedirs =
     dist
@@ -116,6 +116,6 @@ exclude =
 # PyScaffold's parameters when the project was created.
 # This will be used when updating. Do not change!
 version = 3.2.3
-package = repo_name_to_be_changed
+package = U-net
 extensions =
     markdown
