--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -79,7 +79,7 @@ jobs:
         job_name: '${{ env.SLACK_ICON }} Testing'
         mention: 'here'
         mention_if: always()
-        channel: '#template_ds' #repo_name_to_be_changed
+        channel: '#template_ds' #U-net
         url: https://hooks.slack.com/services/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
         commit: true
         token: ${{ secrets.GITHUB_TOKEN }}
